# NLP4S-Toxicity-Detection

./: .env.example  .gitignore  README.md  evaluation.ipynb  pyproject.toml  requirements.txt
configs/: data.yaml  encoder.yaml  eval.yaml  llm.yaml
data/synthetic/: implicit.csv
docs/: assignment.md  implementation_plan.md
outputs/encoder_out/: predictions.jsonl
outputs/eval/: bertscore_aggregated.csv  bertscore_correctness_correlation.csv  bertscore_per_example.csv  encoder_by_functionality.csv  encoder_by_group.csv  encoder_by_language.csv  encoder_expl_impl_gap_by_language.csv  encoder_f1_heatmap.csv  encoder_impl_expl_gap_by_language.csv  encoder_pooled_group_f1.csv  encoder_vs_llm_comparison.csv  llm_detailed_metrics.csv  llm_judge_correctness_correlation.csv  llm_judge_per_example.csv  llm_summary_by_model_condition_group.csv  rq1_statistical_tests.csv  rq2_explanation_delta.csv  rq2_mcnemar_explanation_effect.csv  rq3_demo_selection_metrics.csv  rq3_friedman_test.csv  rq3_mcnemar_demo_selection.csv  rq3_wilcoxon_posthoc.csv
outputs/llm/: pred_aya_bm25.jsonl  pred_aya_random.jsonl  pred_aya_target_group.jsonl  pred_llama3_bm25.jsonl  pred_llama3_random.jsonl  pred_llama3_target_group.jsonl  pred_mistral_bm25.jsonl  pred_mistral_random.jsonl  pred_mistral_target_group.jsonl  predictions.jsonl
scripts/: explanation_quality.py  llm_metrics.py  overnight_sub8.sh  run_llm_experiments.sh  run_llm_ollama.sh  run_pipeline.sh
src/nlp4s/: __init__.py  cli.py  config.py  functionalities.py  (+2 more)
tests/: test_data.py  test_generation.py  test_llm.py  test_schema.py
(+32 files in other folders)
