[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp4s"
version = "0.0.1"
description = "Implicit vs Explicit Hate Speech Detection in a Multilingual Setting (DSAIT4100 NLP for Society, Group 3)"
requires-python = ">=3.10"
# Runtime dependencies are pinned in requirements.txt (install with: pip install -r requirements.txt).
dependencies = []

[project.scripts]
nlp4s = "nlp4s.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
